--- a/news/app/src/main/res/values/styles.xml
+++ b/news/app/src/main/res/values/styles.xml
@@ -15,9 +15,21 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="AnimationPreview">
-        <item name="android:windowEnterAnimation">@anim/fade_in</item>
-        <item name="android:windowExitAnimation">@anim/fade_out</item>
+    <style name="AnimationPreviewBC">
+        <item name="android:windowEnterAnimation">@anim/bc_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/bc_fade_out</item>
+    </style>
+    <style name="AnimationPreviewBR">
+        <item name="android:windowEnterAnimation">@anim/bottom_right_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/bottom_right_fade_out</item>
+    </style>
+    <style name="AnimationPreviewTC">
+        <item name="android:windowEnterAnimation">@anim/tc_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/tc_fade_out</item>
+    </style>
+    <style name="AnimationPreviewTR">
+        <item name="android:windowEnterAnimation">@anim/top_right_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/top_right_fade_out</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
