--- a/news/app/src/main/res/layout/fragment_subscribe_key.xml
+++ b/news/app/src/main/res/layout/fragment_subscribe_key.xml
@@ -8,21 +8,28 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_spread_item"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="16.5dp"
+            android:layout_height="16.5dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="18.5dp"
             android:layout_marginRight="18.5dp"
             android:src="@mipmap/my_subscibe_open" />
 
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="40dp"
+            android:background="#dfdfdf" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_key_word"
             android:layout_width="match_parent"
-            android:layout_height="40dp"></android.support.v7.widget.RecyclerView>
+            android:layout_height="40dp"
+            android:layout_marginLeft="15dp"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
     <View
