--- a/news/app/src/main/res/layout/item_message.xml
+++ b/news/app/src/main/res/layout/item_message.xml
@@ -3,46 +3,50 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_message_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_meun" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/iv_message_icon"
-            android:text="nihao" />
+            android:layout_marginBottom="12.5dp"
+            android:layout_marginLeft="16.5dp"
+            android:layout_marginTop="15dp"
+            android:text="nihao"
+            android:textColor="#333"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="16.5dp"
             android:text="2017/01/02"
-            android:layout_marginRight="10dp" />
+            android:textColor="#999"
+            android:textSize="12sp" />
     </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_content"
-        android:text="ffjwwwwwwwwwwwwfefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefefe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="16.5dp"
+        android:layout_marginRight="16.5dp"
+        android:text=""
+        android:textColor="#999"
+        android:textSize="12sp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="0.5dp"
         android:background="@color/divide" />
 </LinearLayout>
