--- a/news/app/src/main/res/values/colors.xml
+++ b/news/app/src/main/res/values/colors.xml
@@ -34,5 +34,6 @@
     <color name="red">#ff0000</color>
     <color name="text_color">#767676</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray_ccc">#ccc</color>
 </resources>
 
